fix: msg spacing

--- a/src/app/components/Message/styles.scss
+++ b/src/app/components/Message/styles.scss
@@ -1,5 +1,5 @@
 .message-container {
-  margin-top: 16%;
+  margin-top: 18%;
   margin-left: 20%;
   max-width: 80%;
   color: white;
